fix navbar mobile spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -181,7 +181,7 @@ a {
 .toggler {
 	display: flex;
 	align-items: center;
-	margin-left: 1em;
+	margin-left: 1.5em;
 	opacity: 0.8;
   }
   
@@ -190,7 +190,7 @@ a {
   }
   
   .toggler-slider {
-	width: 24px;
+	width: 22px;
 	height: 10px;
 	background-color: var(--color-light-brown1);
 	border-radius: 2rem;
